Add Instructions and Extend Maven Docu (#292)